--- a/Client/package.json
+++ b/Client/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.13.1",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -30,7 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.18",
     "vite": "^6.2.0"
   }
 }
