--- a/Server/package.json
+++ b/Server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -19,6 +20,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10"
